umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_oxirane.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: heterocycles
atom_typing:
  success: true
  summary:
    atom_count: 3
    bond_count: 3
    topology: Bw
    atoms:
      - "C#h2#v2"
      - "C#h2#v2"
      - "O#n2#v2"
    bonds:
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 3
    bond_count: 3
    topology: Bw
    atoms:
      - "C#h2#v2"
      - "C#h2#v2"
      - "O#n2#v2"
    bonds:
      - "-"
      - "-"
      - "-"
