umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_piperidine.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: heterocycles
atom_typing:
  success: true
  summary:
    atom_count: 6
    bond_count: 6
    topology: EoaW
    atoms:
      - "C#h2#v2"
      - "C#h2#v2"
      - "N#h#n#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 6
    bond_count: 6
    topology: EoaW
    atoms:
      - "C#h2#v2"
      - "C#h2#v2"
      - "N#h#n#v2"
      - "C#h2#v2"
      - "C#h2#v2"
      - "C#h2#v2"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
