umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_pyrrolizidine.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: heterocycles
atom_typing:
  success: true
  summary:
    atom_count: 8
    bond_count: 9
    topology: "GoGK`K"
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{N/1v3}"
      - "{CH2v2}"
      - "{CH1v3}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 8
    bond_count: 9
    topology: "GoGK`K"
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{N/1v3}"
      - "{CH2v2}"
      - "{CH1v3}"
      - "{CH2v2}"
      - "{CH2v2}"
      - "{CH2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
      - "-"
