umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_succinimide.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: heterocycles
atom_typing:
  success: true
  summary:
    atom_count: 7
    bond_count: 7
    topology: FoOt?
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{Cv4}"
      - "{Cv4}"
      - "{N/1H1v2}"
      - "{O/2v2}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
      - "-"
      - "="
counts:
  success: true
  summary:
    atom_count: 7
    bond_count: 7
    topology: FoOt?
    atoms:
      - "{CH2v2}"
      - "{CH2v2}"
      - "{Cv4}"
      - "{Cv4}"
      - "{N/1H1v2}"
      - "{O/2v2}"
      - "{O/2v2}"
    bonds:
      - "-"
      - "-"
      - "-"
      - "-"
      - "="
      - "-"
      - "="
